[package]
name = "lv2-parameters"
version = "0.1.0"
authors = ["Johannes Mueller <github@johannes-mueller.org>"]
edition = "2018"
license = "MIT OR Apache-2.0"

description = "rust-lv2's wrapper of LV2's parameters"
readme = "README.md"
repository = "https://github.com/RustAudio/rust-lv2"

[badges]
travis-ci = { repository = "RustAudio/rust-lv2", branch = "master" }
maintenance = { status = "actively-developed" }

[dependencies]
urid = "0.1.0"
lv2-sys = "1.0.0"
